# weekly_challenges

./: README.md
week-1/: README.md  data.csv
week-1/BinodNagarkoti/: main.js
week-1/HungerArray/: .gitignore  readme.md  week1.code-workspace
week-1/JuJu2181/: itson1.py
week-1/Mob-Anish/: app.js  result.json
week-1/Neeraj319/: example.csv  main.py
week-1/Rohan-Shakya/: README.md  app.js  data.csv
week-1/Sans/: main.py
week-1/Saphall/: README.md  csv-to-json.py
week-1/Suneel5/: main.py
week-1/SushanShakya/: csv_to_json.dart
week-1/ZiaulHasanHamim/: CsvParser.cs  JsonWriter.cs  Program.cs  README.md  ZiaulHasanHamim.sln  result.json
week-1/aabishkaryal/: main.go
week-1/akumaayush/: index.js  readme.md
week-1/awebisam/: main.py
week-1/demo-submission/: main.py
week-1/four-3/: Makefile  data.csv  main.cpp
week-1/gauravpan/: README.md  index.html
week-1/ishworii/: main.py
week-1/jidesh/: csvtojson.py  result.json
week-1/juju2181/: input.csv  itson1.py  output.json
week-1/nirajpdn/: result.json  script.js
week-1/roopeshach/: index.php
week-1/rubiin/: README.md  data.csv  index.js
week-1/sajidantechie/: index.js  output.json  package.json
week-1/sloth59/: main.go
week-1/sushan/: output.json
week-1/washbin/: main.js
week-2/: README.md
week-2/Hungerarray/: .gitignore  CMakeLists.txt  Connect.cpp  Connect.h  HttpRequest.cpp  HttpRequest.h  HttpsRequest.cpp  HttpsRequest.h  README.md  Url.h  WebRequestAbstract.h  child.cpp  main.cpp  test
week-2/Hungerarray/dependencies/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
week-3/: Readme.md  themakrib
week-4/: README.md
(+29 files in other folders)
